fix the width of the to fill the 100% of the screen and prevent user to scroll on mobile menu

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -136,8 +136,8 @@
   }
 
   #mobile-menu {
-    position: absolute;
-    height: 80vh;
+    position: fixed;
+    height: 100vh;
     width: 100vw;
     top: 0;
     left: 0;
